Solved node-red reference issue

--- a/w-esp-chrome-app/js/node-red.html
+++ b/w-esp-chrome-app/js/node-red.html
@@ -1,6 +1,6 @@
 <html>
-<head><script src="js/jquery.js"></script>
-<script src="js/node-red.js"></script>
+<head><script src="jquery.js"></script>
+<script src="node-red.js"></script>
 </head><body style="margin: 0;">
 <webview src="https://www.google.com/" name="google-view" id="web" style="width:100%; height:100%"></webview>
 </body></html>
